<resources>
    <string name="app_name">Football Teams</string>
    <string name="sales_icon">Sales</string>
    <string name="main">Главное</string>
    <string name="Legues">Лиги</string>
    <string name="teams">Команды</string>
    <string name="football_logo">Football</string>
    <string name="football_logo_2">Teams</string>
    <string name="categor_plits">categor_plits</string>
    <string name="Country">Страна</string>
    <string name="Manchester">Manchester</string>
    <string name="Trainer">Тренер</string>
    <string name="Level">Уровень</string>
    <string name="club_page_description">«Манче́стер Юна́йтед» — английский профессиональный футбольный клуб из Траффорда, Большой Манчестер. Был основан в 1878 году под названием «Ньютон Хит », в 1902 году изменил название на «Манчестер Юнайтед». Один из самых популярных футбольных клубов в мире. Один из основателей английской Премьер-лиги в 1992 году.</string>


</resources>