<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:id="@+id/clubPageBg"
    tools:context=".ClubPage">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="65dp"
        android:layout_height="0dp"
        android:background="@color/addWidgetColor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginBottom="20dp"
            android:contentDescription="@string/sales_icon"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/asd" />

        <TextView
            android:id="@+id/teams"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:layout_marginBottom="80dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/teams"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/legues"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:fontFamily="@font/cabin"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/Legues"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/teams"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/main"
            android:layout_width="100dp"
            android:layout_height="145dp"
            android:fontFamily="@font/cabin_bold"
            android:gravity="center"
            android:rotation="-90"
            android:text="@string/main"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/legues"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            tools:ignore="MissingConstraints" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/clubPageImage"
        android:layout_width="0dp"
        android:layout_height="210dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/manchester_logo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:fontFamily="@font/cabin_bold"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/clubPageImage" />

    <androidx.cardview.widget.CardView
        android:id="@+id/ClubBG"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="@+id/clubPageImage">

        <LinearLayout


            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/cabin"
                    android:gravity="center"
                    android:text="@string/Country"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="55dp"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/cabin"
                    android:text="@string/Trainer"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/clubPageCountry"


                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:fontFamily="@font/cabin_bold"
                    android:gravity="center"
                    android:text="@string/Country"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/clubPageTrainerID"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:layout_marginStart="45dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/cabin_bold"
                    android:text="@string/Trainer"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>


        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/clubDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="50dp"
        android:fontFamily="@font/cabin"
        android:text="@string/club_page_description"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/ClubBG" />

    <ImageButton
        android:id="@+id/buyClub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/transparent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toBottomOf="@+id/clubDescription"
        app:srcCompat="@drawable/shop" />

</androidx.constraintlayout.widget.ConstraintLayout>